@@ -43,3 +43,4 @@
   Privatized DbConnection.revalidate()
   Added EntityModel.allowInsert/Update/Delete, for overriding. Fx. used when initializing the EntityPanel, also prevents actual insert/update/delete
   IEntityDb.getDependentEntities now returns a Map instead of a HashMap
+  Fixed Entity.propertyValuesEqual(), it now uses the entity recieved as parameter as base for the comparison
